--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "fissionmunk"
 version = "0.1.0"
-description = ""
-authors = ["Aniket Mishra <mishra2@ualberta.ca>"]
+description = "FissionMunk is a lightweight 2D physics open source python library designed to simulate nuclear fission reactor mechanics."
+authors = ["Aniket Mishra <ianiket23@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
