--- a/.github/workflows/Unit Test.yml
+++ b/.github/workflows/Unit Test.yml
@@ -30,6 +30,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pymunk
+        python -m pip install pytest
 
     - name: Run tests
       run: |
