--- a/.github/workflows/Unit Test.yml
+++ b/.github/workflows/Unit Test.yml
@@ -31,7 +31,11 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install pymunk
         python -m pip install pytest
+      working-directory: /home/runner/work/FissionMunk/
 
     - name: Run tests
       run: |
         pytest
+      working-directory: /home/runner/work/FissionMunk/
+
+
