--- a/.github/workflows/Unit Test.yml
+++ b/.github/workflows/Unit Test.yml
@@ -31,11 +31,11 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install pymunk
         python -m pip install pytest
-      working-directory: ./FissionMunk/
+      working-directory: ..
 
     - name: Run tests
       run: |
         pytest
-      working-directory: ./FissionMunk/
+      working-directory: ..
 
 
