--- a/.github/workflows/deploy docs.yml
+++ b/.github/workflows/deploy docs.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Install dependencies
         run: |
           pip install sphinx sphinx_rtd_theme myst_parser
+      - name: List directory structure
+        run: |
+          ls -R
       - name: Sphinx build
         run: |
           sphinx-build ../docs -b html docs _build
