--- a/.github/workflows/deploy docs.yml
+++ b/.github/workflows/deploy docs.yml
@@ -19,7 +19,7 @@ jobs:
           ls -R
       - name: Sphinx build
         run: |
-          sphinx-build ../docs -b html docs _build
+          sphinx-build docs -b html docs _build
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
