--- a/.github/workflows/deploy docs.yml
+++ b/.github/workflows/deploy docs.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install sphinx sphinx_rtd_theme myst_parser
+          pip install sphinx-autodoc-typehints
       - name: Sphinx build
         run: |
           sphinx-build ../docs -b html docs _build
