--- a/.github/workflows/deploy docs.yml
+++ b/.github/workflows/deploy docs.yml
@@ -27,4 +27,5 @@ jobs:
         with:
           publish_branch: gh-pages
           publish_dir: _build/
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           force_orphan: true
