--- a/.github/workflows/deploy docs.yml
+++ b/.github/workflows/deploy docs.yml
@@ -21,7 +21,9 @@ jobs:
       - name: Sphinx build
         run: |
           sphinx-build -b html docs _build
-          touch build/.nojekyll
+      - name: Add .nojekyll
+        run: |
+          touch docs/_build/html/.nojekyll
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
