--- a/.github/workflows/deploy docs.yml
+++ b/.github/workflows/deploy docs.yml
@@ -10,7 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v9
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.13' 
       - name: Install dependencies
         run: |
           pip install sphinx sphinx_rtd_theme myst_parser
