--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,7 +28,6 @@ jobs:
         poetry check
         poetry build
     - name: Publish package
-      env:
-        POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_API_TOKEN }}
       run: |
+        poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
         poetry publish
