--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -3,8 +3,10 @@
 
 name: Upload Python Package
 
-on: [push, pull_request, workflow_dispatch]
-
+on:
+  release:
+    types: [published]
+    
 permissions:
   contents: read
 
@@ -29,5 +31,4 @@ jobs:
         poetry build
     - name: Publish package
       run: |
-        poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
         poetry publish
