--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,8 +28,10 @@ jobs:
       run: |
         poetry check
         poetry build
-
-    - name: Publish to PyPI
+    - name: Configure Poetry with PyPI token
       env:
-        POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_API_TOKEN }}
-      run: poetry publish --username __token__ --password $PYPI_API_TOKEN
+        PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+      run: poetry config pypi-token.pypi $PYPI_API_TOKEN
+    - name: Publish to PyPI
+      run: |
+        poetry publish
