--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,9 +1,9 @@
 name: Upload Python Package
 
-# on:
-#   release:
-#     types: [published]
-on: [push, pull_request, workflow_dispatch]
+on:
+  release:
+    types: [published]
+
 permissions:
   contents: read
 
