--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fissionmunk"
-version = "0.0.4"
+version = "0.0.5"
 description = "FissionMunk is a lightweight 2D physics open source python library designed to simulate nuclear fission reactor mechanics."
 authors = ["Aniket Mishra <ianiket23@gmail.com>"]
 readme = "README.md"
@@ -11,7 +11,7 @@ keywords = ["fission", "nuclear", "physics", "simulation", "reactor", "2D", "pyt
 
 [tool.poetry.dependencies]
 python = ">=3.6"
-pymunk = ">=6.9.0"
+pymunk = "6.9.0"
 
 
 [build-system]
