--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,7 +30,7 @@ jobs:
         poetry build
     - name: Configure Poetry with PyPI token
       env:
-        PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        PYPI_API_TOKEN: ${{ secrets.PYPI_TOKEN }}
       run: poetry config pypi-token.pypi $PYPI_API_TOKEN
     - name: Publish to PyPI
       run: |
